{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerMap",
            "id": "745f47f1-fc2b-4685-921f-6e4c4ae1ec8b",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "2b66b1e9-2da0-43e9-81e8-1fb3303c7c6a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "f86f8919-b842-4adc-8181-03871c773961",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BlueColor",
                    "type": "Button",
                    "id": "cff0ed7f-2416-4019-9add-c737a978e00d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RedColor",
                    "type": "Button",
                    "id": "9e806afb-cb39-432d-89d1-a00d20cd9a50",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PickWeapon",
                    "type": "Button",
                    "id": "d4d3aa28-b2e1-436e-ac5e-422c738815d6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MeleeAttack",
                    "type": "Button",
                    "id": "81ebff83-5f2d-4764-9cd1-fbae9bf9991b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Move",
                    "id": "fa8861c9-4f0f-48b4-a24a-38cd2de1b939",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a236350b-1581-4bc7-bd4e-75f3c8cc908f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e464fd6f-5060-408e-805c-e9d413cf776a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "fc5c5040-6597-43ad-ba02-371542523c20",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0851a1d5-2dc6-4a93-9c95-94535e7e877c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "af2d5de7-414c-468c-b01e-08ce323695a7",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7a2c94d6-f969-4c50-b573-b31a81abcbfb",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RedColor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b3888261-6124-454c-80e4-92117521c811",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BlueColor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ba456af1-b320-4608-bea5-2c46be48aa7f",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PickWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "16944630-9468-42cd-b509-361f0e83d380",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MeleeAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UIMap",
            "id": "46123b6c-c9d0-422f-90f2-d945df2c514c",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "0f3ff2e7-d00b-4d8c-b599-3b2f5b8c77e2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "99256181-9b42-4d05-8baa-5b20a96e0a82",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "DoorMinigameMap",
            "id": "29a7e1e3-1942-4898-9f05-941d23239ae0",
            "actions": [
                {
                    "name": "Action",
                    "type": "Button",
                    "id": "cd0a9cc1-dc09-4d23-abb4-039317291c7c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b29c746a-fac7-4634-b31c-64eb993407f1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}